# voxlen

./: .env.example  .gitignore  .vercelignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: session-end.sh  session-start.sh
.github/workflows/: build-android.yml  build.yml  deploy-landing.yml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
billing/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
billing/src/: interop_test.ts  keygen.ts  license.ts  server.ts  sign.ts
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  PRIVACY.md  RELEASE.md  SECURITY.md
ios/: README.md
ios/VoxKeyboard/: PrivacyInfo.xcprivacy
ios/VoxKeyboard/VoxApp/: VoxApp.entitlements  VoxApp.swift
ios/VoxKeyboard/VoxKeyboardExtension/: Info.plist  KeyboardViewController.swift  VoxKeyboardExtension.entitlements
ios/VoxlenKeyboard/VoxlenApp/: VoxlenApp.swift
ios/VoxlenKeyboard/VoxlenKeyboardExtension/: KeyboardViewController.swift
landing/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
landing/api/: _auth.ts  _plans.ts  _stripe-webhook.ts  admin-health.ts  admin-waitlist.ts  checkout.ts  deepgram-token.ts  desktop-token.ts  generate-key.ts  grammar.ts  me.ts  stripe-webhook.ts  stt.ts  translate.ts  tsconfig.json  vocabulary.ts  waitlist.ts
landing/public/: robots.txt  sitemap.xml
landing/public/ai-dictation-software/: index.html
landing/public/best-voice-to-text-software/: index.html
landing/public/dictation-software-for-accountants/: index.html
landing/public/dictation-software-for-accountants-uk/: index.html
landing/public/dictation-software-for-solicitors-uk/: index.html
landing/public/dragon-naturallyspeaking-alternative/: index.html
landing/public/legal-dictation-new-zealand/: index.html
landing/public/legal-dictation-software/: index.html
landing/public/legal-dictation-software-australia/: index.html
landing/public/legal-voice-dictation-canada/: index.html
landing/public/voice-dictation-android/: index.html
landing/public/voice-dictation-for-lawyers/: index.html
landing/public/voice-dictation-iphone/: index.html
landing/public/voice-dictation-mac/: index.html
landing/public/voice-dictation-windows/: index.html
landing/public/voice-to-text-for-medical/: index.html
landing/public/voxlen-vs-dragon/: index.html
landing/public/voxlen-vs-otter/: index.html
landing/public/voxlen-vs-wispr-flow/: index.html
landing/scripts/: generate-og.mjs
landing/src/: App.tsx  LegalModal.tsx  Privacy.tsx  Terms.tsx  faq-data.ts  globals.css  main.tsx  vite-env.d.ts
landing/src/components/: CookieBanner.tsx  Dashboard.tsx  EthicsSection.tsx  LiveDemo.tsx  ROICalculator.tsx
landing/src/lib/: auth.ts  stripe.ts
legal/: ACCEPTABLE_USE.md  COPYRIGHT.md  DPA.md  EULA.md  PRIVACY_POLICY.md  README.md  SUBPROCESSORS.md  TERMS.md  THIRD_PARTY_NOTICES.md
public/: sitemap.xml
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: api-client.test.ts  api-client.ts  browser-key-warning.ts  dictation.ts  grammar-api.test.ts  grammar.test.ts  grammar.ts  index.ts  speech-recognition.d.ts  types.ts  voxlen.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  main.rs  models.rs  secrets.rs
src-tauri/src/audio/: capture.rs  devices.rs  loopback.rs  mod.rs
src-tauri/src/commands/: audio.rs  dictation.rs  documents.rs  grammar.rs  history.rs  keyring.rs  license.rs  meeting.rs  mod.rs  permissions.rs  review.rs  settings.rs  stt.rs  text_injection.rs  translate.rs  whisper.rs  window.rs
src-tauri/src/grammar/: llm_local.rs  llm_models.rs  mod.rs  rules.rs
src-tauri/src/meeting/: extract.rs  mod.rs
src-tauri/src/stt/: cloud.rs  gate.rs  mod.rs  processor.rs  streaming.rs  switch.rs  whisper_local.rs
src-tauri/src/text_injection/: mod.rs
src-tauri/tests/: license_interop.rs
src-tauri/tests/fixtures/: license_fixture.json  license_forged_fixture.json
src/components/: ErrorBoundary.tsx
src/components/analytics/: AnalyticsPanel.tsx
src/components/clauses/: ClauseLibrary.tsx
src/components/clients/: ClientsPanel.tsx
src/components/dictation/: DictationPanel.test.tsx  DictationPanel.tsx  HistoryPanel.tsx  TimeEntryReviewBanner.tsx  TranscriptView.tsx  Waveform.tsx  clientSelector.test.tsx
src/components/flywheel/: FlywheelPanel.tsx
src/components/grammar/: GrammarPanel.tsx
src/hooks/: useGlobalShortcuts.ts  usePersistedSettings.ts  useTauriEvents.ts
src/lib/: autoDoc.test.ts  autoDoc.ts  billing.test.ts  billing.ts  constants.ts  contextFormat.test.ts  contextFormat.ts  export.test.ts  export.ts  exportLedes.test.ts  exportLedes.ts  keyring.ts  legalVocab.test.ts  legalVocab.ts  localCorrections.test.ts  localCorrections.ts  matterMatch.test.ts  matterMatch.ts  migrateBilling.test.ts  migrateBilling.ts  reviewPacket.test.ts  reviewPacket.ts  sendReview.ts  settings.test.ts  settings.ts  smartFormat.test.ts  smartFormat.ts  utbms.ts  utils.test.ts  utils.ts  vocab.ts  vocabImport.test.ts  vocabImport.ts  voiceCommands.test.ts  voiceCommands.ts
src/stores/: audio.ts  clauses.test.ts  clauses.ts  clients.test.ts  clients.ts  dictation.test.ts  dictation.ts  entitlement.test.ts  entitlement.ts  flywheel.test.ts  flywheel.ts  history.test.ts  history.ts  navigation.ts  review.ts  settings.ts  usage.test.ts  usage.ts
src/styles/: globals.css
(+35 files in other folders)
