[package]
name = "vox"
version = "1.0.0"
description = "Vox - AI-Powered Voice Dictation"
authors = ["Vox Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
ringbuf = "0.4"
rubato = "0.16"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
bytemuck = { version = "1", features = ["derive"] }
futures-util = "0.3"
rodio = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "linux")'.dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
